--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,15 @@
 			<version>42.5.4</version>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version> <!-- Use a versão mais recente ou adequada -->
+		</dependency>
+
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
