--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=loja_virtual_mentoria
+spring.datasource.url=jdbc:postgresql://localhost:5432/loja_virtual_mentoria
+spring.datasource.username=postgres
+spring.datasource.password=f0304yxc10
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.platform=postgres
